Add go func to get all recipes, get client rending the list

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -48,9 +48,15 @@
 
 <!-- Add your elements here -->
 <!--<link rel="import" href="app-config.html">-->
-<!--<link rel="import" href="../styles/app-theme.html">-->
+<link rel="import" href="../css/app-theme.html">
+<link rel="import" href="../css/global-styles.html">
+<link rel="import" href="../css/utility-styles.html">
+
+<link rel="import" href="global-behavior.html">
 
 <link rel="import" href="user-behavior.html">
 <link rel="import" href="user-collection.html">
+
+<link rel="import" href="recipe-collection.html">
 
 <link rel="import" href="cookie-display.html">
