--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -1,4 +1,4 @@
-<script src="../bc/page/page.js"></script>
+<script src="/bc/page/page.js"></script>
 <script>
   window.addEventListener('WebComponentsReady', function() {
 
