--- a/app/elements/user-behavior.html
+++ b/app/elements/user-behavior.html
@@ -4,8 +4,8 @@
 -->
 
 <script>
-var UvbaseBehaviors = UvbaseBehaviors || {};
-UvbaseBehaviors.UserBehavior = [{
+var RecipeBehaviors = RecipeBehaviors || {};
+RecipeBehaviors.UserBehavior = [{
 
     properties: {
         user: {
@@ -95,5 +95,5 @@ UvbaseBehaviors.UserBehavior = [{
         else return '(no activity recorded)';
     },
 },
-UvbaseBehaviors.GlobalBehavior];
+RecipeBehaviors.GlobalBehavior];
 </script>
