--- a/app/home.html
+++ b/app/home.html
@@ -29,11 +29,10 @@
     <meta name="msapplication-TileImage"
         content="images/touch/ms-touch-icon-144x144-precomposed.png">
 
-    <!--<link rel="stylesheet" href="styles/main.css">-->
-    <link rel="stylesheet" href="./bc/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="bc/bootstrap/dist/css/bootstrap.css">
 
-    <script src="../bc/webcomponentsjs/webcomponents-lite.js"></script>
-    <!--<script src="../bc/webcomponentsjs/webcomponents.js"></script> -->
+    <script src="bc/webcomponentsjs/webcomponents-lite.js"></script>
 
     <!-- Google Font: Montserrat -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700'
@@ -57,41 +56,37 @@
         <style is="custom-style" include="global-styles"></style>
         <style is="custom-style" include="utility-styles"></style>
 	
-        <!-- the drawer panel holds the nav drawer and the main toolbar -->
-        <paper-drawer-panel 
-                drawer-width="200px" 
-                class="mainContentBackground"
-                responsive-width="1035px">
-            <!-- the first header panel is for the drawer -->
-            <paper-header-panel drawer>
-                <paper-toolbar>
-                    <div class="middle middle-container center horizontal layout">
-                        <div class="menu-header-text">Menu</div>
-                    </div>
-                </paper-toolbar>
-                 <!-- man navbar with page links -->
-                <paper-menu class="list" attr-for-selected="data-route"
-                    selected="" paper-drawer-toggle>
+        <!--[> the drawer panel holds the nav drawer and the main toolbar <]-->
+        <!--<paper-drawer-panel -->
+                <!--drawer-width="200px" -->
+                <!--class="mainContentBackground"-->
+                <!--responsive-width="1035px">-->
+            <!--[> the first header panel is for the drawer <]-->
+            <!--<paper-header-panel drawer>-->
+                <!--<paper-toolbar>-->
+                    <!--<div class="middle middle-container center horizontal layout">-->
+                        <!--<div class="menu-header-text">Menu</div>-->
+                    <!--</div>-->
+                <!--</paper-toolbar>-->
+                 <!--[> man navbar with page links <]-->
+                <!--<paper-menu class="list" attr-for-selected="data-route"-->
+                    <!--selected="" paper-drawer-toggle>-->
 
-                    <a data-route="recipes" href="/" paper-drawer-toggle>
-                        <iron-icon icon="icons:home"></iron-icon>
-                        <span>Dashboard</span>
-                    </a>
-                    <a data-route="users" href="/users" hidden$="[[!isUserAdmin(userRole)]]">
-                        <iron-icon icon="social:people"></iron-icon>
-                        <span>Users</span>
-                    </a>
-                    <a data-route="about" href="/about" hidden$="[[!isUserAdmin(userRole)]]">
-                        <iron-icon icon="icons:list"></iron-icon>
-                        <span>Logs</span>
-                    </a>
-                    <a data-route="logout" href="/auth/logout">
-                        <iron-icon icon="maps:directions-run"></iron-icon>
-                        <span>Logout</span>
-                    </a>
+                    <!--<a data-route="recipes" href="/" paper-drawer-toggle>-->
+                        <!--<iron-icon icon="icons:home"></iron-icon>-->
+                        <!--<span>Recipes</span>-->
+                    <!--</a>-->
+                    <!--<a data-route="users" href="/users" hidden$="[[!isUserAdmin(userRole)]]">-->
+                        <!--<iron-icon icon="social:people"></iron-icon>-->
+                        <!--<span>Users</span>-->
+                    <!--</a>-->
+                    <!--<a data-route="logout" href="/auth/logout">-->
+                        <!--<iron-icon icon="maps:directions-run"></iron-icon>-->
+                        <!--<span>Logout</span>-->
+                    <!--</a>-->
 
-                </paper-menu>
-            </paper-header-panel>
+                <!--</paper-menu>-->
+            <!--</paper-header-panel>-->
 
             <!-- the second header panel is the main page, including
                 the main toolbar -->
@@ -133,6 +128,8 @@
                     <iron-pages attr-for-selected="data-route" selected="{{route}}">
 
                         <section data-route="recipes">
+                            <recipe-collection>
+                            </recipe-collection>
                         </section>
 
                         <section data-route="about">
@@ -151,7 +148,7 @@
 
     </template>
 
-    <!--<script src="scripts/app.js"></script>-->
+    <script src="/js/app.js"></script>
 
   <script>
     var app = document.querySelector('#app');
