Remove bootstrap and jquery, fix some css

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,5 +1,6 @@
 <!-- Iron elements -->
-<link rel="import" href="../bc/iron-flex-layout/classes/iron-flex-layout.html">
+<!-- is something else here including this? it's used in the main file somehow -->
+<!--<link rel="import" href="../bc/iron-flex-layout/classes/iron-flex-layout.html">-->
 <link rel="import" href="../bc/iron-icons/iron-icons.html">
 <link rel="import" href="../bc/iron-icons/social-icons.html">
 <link rel="import" href="../bc/iron-icons/maps-icons.html">
