--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     <meta name="msapplication-TileImage"
         content="images/touch/ms-touch-icon-144x144-precomposed.png">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="styles/main.css">
 
     <script src="bc/webcomponentsjs/webcomponents-lite.js"></script>
 
