--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -2,7 +2,10 @@
     Jon Doltar
     2016-02
 -->
-
+<!-- TODO do these do anything? -->
+<link rel="import" href="../bc/polymer/polymer.html">
+<link rel="import" href="../bc/paper-styles/typography.html">
+<link rel="import" href="../bc/paper-styles/color.html">
 
 <style is="custom-style">
 
@@ -50,7 +53,8 @@
         padding: 16px 0 16px 0;
         width: calc(98.66% - 16px);
         margin: 16px auto;
-        background: white;
+            /* change this back to white once I see it working */
+        background: green;
     }
 
     paper-menu iron-icon {
