--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -49,10 +49,6 @@
 
 <!-- Add your elements here -->
 <!--<link rel="import" href="app-config.html">-->
-<link rel="import" href="../css/app-theme.html">
-<link rel="import" href="../css/global-styles.html">
-<link rel="import" href="../css/utility-styles.html">
-
 <link rel="import" href="global-behavior.html">
 
 <link rel="import" href="user-behavior.html">
@@ -61,3 +57,8 @@
 <link rel="import" href="recipe-collection.html">
 
 <link rel="import" href="cookie-display.html">
+
+<link rel="import" href="../styles/app-theme.html">
+<link rel="import" href="../styles/global-styles.html">
+<link rel="import" href="../styles/utility-styles.html">
+
